--- a/BooleanMinimizator/Views/Home/Index.cshtml
+++ b/BooleanMinimizator/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BooleanMinimizator.Models.BooleanMinimizatorModel
+@model BooleanMinimizator.Models.BooleanMinimizatorModel
 
 @{
     ViewData["Title"] = "Boolean minimizer calculator";
@@ -37,6 +37,21 @@
             <p>@Model.ResultMessage</p>
         </div>
     }
+
+    @if (Model.PolizOutput is not null)
+    {
+        <div class="alert alert-secondary mt-3">
+            <strong>ПОЛИЗ:</strong> @Model.PolizOutput
+        </div>
+    }
+
+    @if (Model.VectorOutput is not null)
+    {
+        <div class="alert alert-info mt-3">
+            <strong>Вектор функции:</strong> @Model.VectorOutput
+        </div>
+    }
+    
 </div>
 
 <section class="instructions">
